--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
           <div class="col">
             <h2>DESARROLO DIGITAL</h2>
             <a href="https://sites.google.com/view/davidarechiga/inicio">VER MAS</a>
-            <h5>Desarrollo de productos digitales. Conherramientas y lenguales de programación Unity y más.</h5>
+            <h5>Desarrollo de productos digitales. Con herramientas y lenguales de programación.</h5>
             <a href="https://sites.google.com/view/davidarechiga/inicio"><img class="img-fluid" src="./assets/4.png"
                 alt=""></a>
           </div>
