--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <h2 class="accordion-header" id="flush-headingSix">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
-                    <h5 class="responsive-text">MANTENIMINETO WEB</h5>
+                    <h5 class="responsive-text" style="font-size:12px;">MANTENIMIENTO WEB</h5>
                   </button>
                 </h2>
                 <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix"
