--- a/index.html
+++ b/index.html
@@ -464,8 +464,8 @@
         <h1 class="text-center py-5 title-services">CONTACTO </h1>
         <div class="row text-center">
                       <h2>Contactame sin Compromisos</h2>
-                      <p>Correo: Ing.David.Arechiga@gmail.com</p>
-                      <p>Celular: 646 198 25 17</p>
+                      <h5>Correo: Ing.David.Arechiga@gmail.com</h5>
+                      <h5>Celular: 646 198 25 17</h5>
           <div class="col col-contact">
 
             <form action="https://formspree.io/f/mayzoppo" method="POST" class="form">
