--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
               <div class="col-12 col-about pt-3">
                 <h3>ACERCA DE MI</h3>
                 <p class="about-title">Ingeniero centrado en la mejora de procesos a través de herramientas analíticas de programación y desarrollo de
-                tecnología. He creado, editado y desarrollado productos específicos en los sectores virtual, de
-                aplicaciones e instalación, facilitando y asesorando. <br> Siempre estoy listo y dispuesto para llevar a cabo
+                tecnología. <br> Siempre estoy listo y dispuesto para llevar a cabo
                 mis tareas y aplicar mi pasión por la codificación a un equipo de ingeniería talentoso para desarrollar soluciones de
                 calidad.
                 </p>
