--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                       <h2>Contactame sin Compromisos</h2>
                       <h5>Correo: Ing.David.Arechiga@gmail.com</h5>
                       <h5>Celular: 646 198 25 17</h5>
-          <div class="col col-contact">
+          <div class="col col-contact py-5">
 
             <form action="https://formspree.io/f/mayzoppo" method="POST" class="form">
               <div class="form-container py-2">
