--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                 <input type="text" class="form-input" name="name" placeholder="Nombre:">
                 <input type="email" name="email" class="form-input" placeholder="Correo:">
                 <textarea class="form-input form-input--message" name="message" placeholder="Mensaje:"></textarea>
-                <input type="submit" value="ENVIAR" class="form-cta cv p-4">
+                <input type="submit" value="ENVIAR" class="form-cta cv my-5">
               </div>
             </form>
           </div>
