--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body h5">Creación de riggening de personajes 2D. 
+                  <div class="accordion-body h5">Creación de rigging de personajes 2D. 
                   </div>
                 </div>
               </div>
