--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="row">
 
           <div class="col-4 title text-center pb-4">
-            <h2>DISEÑO <br> VIRTUAL</h2>
+            <h2 class="title-serv">DISEÑO <br> VIRTUAL</h2>
 
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <!--ACORDEON 1-->
@@ -283,7 +283,7 @@
           </div>
 
           <div class="col-4 title text-center pb-4">
-            <h2>DESARROLLO <br> WEB</h2>
+            <h2 class="title-serv">DESARROLLO <br> WEB</h2>
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <!--ACORDEON 4-->
               <div class="accordion-item py-5">
@@ -331,7 +331,7 @@
           </div>
 
           <div class="col-4 title text-center pb-4">
-            <h2>PROYECTOS DE DIGITALIZACION</h2>
+            <h2 class="title-serv">PROYECTOS DE DIGITALIZACION</h2>
             <!--ACORDEON 7-->
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item py-5">
