--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
   <!--NAV-->
   <header class="nav-bar">
-    <nav class="nav navbar navbar-expand-md p-3 custom-navbar">
+    <nav class="nav navbar navbar-expand-lg p-3 custom-navbar">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
