--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
   </section>
 
-  <!--ABOUT-->
+  <!--ABOUT onclick="downloadPDFes()"-->
   <section class="about" id="about">
     <div class="container-1">
       <div class="container abs-center">
@@ -131,7 +131,7 @@
                 <div class="text-center h1" id="counter2">0</div>
               </div>
               <div class="col-12 col-about">
-                <button onclick="downloadPDFes()" class="text-white cv">DESCARGA CV<i
+                <button class="text-white cv">DESCARGA CV<i
                     class="bi bi-download ps-3"></i></button>
               </div>
             </div>
@@ -139,7 +139,7 @@
 
           <div class="col-sm-12 col-md-6 about-col-1 img-about">
             <img src="./assets/img2.jpeg" alt="" class="img-fluid mb-2">
-            <img src="./assets/img2.jpeg" alt="" class="img-fluid">
+            <img src="./assets/img1.jpeg" alt="" class="img-fluid">
           </div>
         </div>
       </div>
