--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
           <div class="col-sm-12 col-md-6 about-col-1 img-about">
             <img src="./assets/img2.jpeg" alt="" class="img-fluid mb-2">
-            <img src="./assets/img11.png" alt="" class="img-fluid">
+            <img src="./assets/img11.png" style="height:60%;" alt="" class="img-fluid">
           </div>
         </div>
       </div>
