--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class="row">
           <div class="col">
             <h1 class="title-1">David Arechiga</h1>
-            <h4 class="pt-5 text-home">Programador<br> Front End Developer</h4>
+            <h4 class="pt-5 text-home">Unity<br>Developer</h4>
           </div>
           <div class="col">
             <img src="./assets/img.png" alt="img" class="img-fluid">
