--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <div class="row p-1">
               <div class="col-12 col-about text-center title">
                 <h1>David Arechiga</h1>
-                <h5>Front end developmet | Programador</h5>
+                <h5> Programador</h5>
               </div>
               <div class="col-12 col-about pt-3">
                 <h3>ACERCA DE MI</h3>
