--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
               </div>
               <div class="col-12 col-about pt-3">
                 <h3>ACERCA DE MI</h3>
-                <p class="about-title">Ingeniero centrado en la mejora de procesos a través de herramientas analíticas de programación y desarrollo de tecnología. He creado, editado y desarrollado productos específicos para clientes en los sectores virtual, de aplicaciones e instalación, facilitando y asesorando a los clientes. Siempre estoy listo y dispuesto para llevar a cabo mis tareas y aplicar mi pasión por la codificación a un equipo de ingeniería talentoso para desarrollar soluciones de calidad.<br> Siempre estoy listo y dispuesto para llevar a cabo
+                <p class="about-title">Ingeniero centrado en la mejora de procesos a través de herramientas analíticas de programación y desarrollo de tecnología. He creado, editado y desarrollado productos específicos para clientes en los sectores virtual, de aplicaciones e instalación, facilitando y asesorando a los clientes. Siempre estoy listo y dispuesto para llevar a cabo mis tareas y aplicar mi pasión por la codificación a un equipo de ingeniería talentoso para desarrollar soluciones de calidad.<br> 
                 </p>
+                <h5> Apasionado por el desarrollo y la innovación</h5>
               </div>
               <div class="col-12 col-about py-2">
                 <h4>PROYECTOS</h4>
