--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h4 class="pt-5 text-home">Unity<br>Developer</h4>
           </div>
           <div class="col">
-            <img src="./assets/img.png" alt="img" class="img-fluid">
+            <img src="./assets/david.png" alt="img" class="img-fluid">
           </div>
         </div>
       </div>
