--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 </p>
                 <h5> Apasionado por el desarrollo y la innovación</h5>
                 <h3>Curiosidades</h3>
-                <p class="about-title">Fui parte del equipo de Brigadas en mi Universidad<br> Soy activamente voluntario en el desarrollo de equipo VR en el museo Caracol en Ensenada <br> Soy miembro activo en el festival de Libros en Ensenada LIBROFEST 
+                <p class="about-title">Fui parte del equipo de Brigadas en mi Universidad<br> Soy activamente voluntario en el desarrollo de equipo VR en el museo Caracol en Ensenada <br> Soy miembro activo en el festival de Libros en Ensenada LIBROFEST <br> Soy apasionado a los perros por lo que mantengo una comunicación con el refugio 4Patas y contribuí en la optimización de su página web
                 </p>
               </div>
               <div class="col-12 col-about py-2">
