--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <p class="about-title">Ingeniero centrado en la mejora de procesos a través de herramientas analíticas de programación y desarrollo de tecnología. He creado, editado y desarrollado productos específicos para clientes en los sectores virtual, de aplicaciones e instalación, facilitando y asesorando a los clientes. Siempre estoy listo y dispuesto para llevar a cabo mis tareas y aplicar mi pasión por la codificación a un equipo de ingeniería talentoso para desarrollar soluciones de calidad.<br> 
                 </p>
                 <h3>Curiosidades</h3>
-                <p class="about-title">Fui parte del equipo de Brigadas en mi Universidad<br> Soy activamente voluntario en el desarrollo de equipo VR en el museo Caracol en Ensenada <br> Soy miembro activo en el festival de Libros en Ensenada LIBROFEST <br> Soy apasionado a los perros por lo que mantengo una comunicación con el refugio 4Patas y contribuí en la optimización de su página web
+                <p class="about-title"><i class="bi bi-award-fill"></i>Fui parte del equipo de Brigadas en mi Universidad<br><i class="bi bi-bank"></i> Soy activamente voluntario en el desarrollo de equipo VR en el museo Caracol en Ensenada <br><i class="bi bi-book"></i> Soy miembro activo en el festival de Libros en Ensenada LIBROFEST <br><i class="bi bi-rocket-takeoff-fill"></i> Soy apasionado a los perros por lo que mantengo una comunicación con el refugio 4Patas y contribuí en la optimización de su página web
                 </p>
               </div>
               <div class="col-12 col-about py-2">
