--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="row">
 
           <div class="col-4 title text-center pb-4">
-            <h2 class="title-serv">DISEÑO <br> VIRTUAL</h2>
+            <h2 class="title-serv">Desarrollo UNITY <br>& VIRTUAL</h2>
 
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <!--ACORDEON 1-->
