--- a/index.html
+++ b/index.html
@@ -118,16 +118,20 @@
               </div>
               <div class="col-12 col-about pt-3">
                 <h3>ACERCA DE MI</h3>
-                <p class="about-title">Ingeniero centrado en la mejora de procesos a través de herramientas analíticas de programación y desarrollo de tecnología. He creado, editado y desarrollado productos específicos para clientes en los sectores virtual, de aplicaciones e instalación, facilitando y asesorando a los clientes. Siempre estoy listo y dispuesto para llevar a cabo mis tareas y aplicar mi pasión por la codificación a un equipo de ingeniería talentoso para desarrollar soluciones de calidad.<br> 
-                </p>
+                <p class="about-title">Engineer focused on process improvement through analytical programming tools and technology development. I have created, edited, and developed specific products for clients in the virtual, application, and installation sectors, facilitating and advising clients. I am always ready and willing to carry out my tasks and apply my passion for coding to a talented engineering team to develop quality solutions.</p>
                 <h3>Curiosidades</h3>
-                <p class="about-title"><i class="bi bi-award-fill"></i>Fui parte del equipo de Brigadas en mi Universidad.<br><i class="bi bi-bank"></i> Soy voluntario en el desarrollo de equipo VR en el museo Caracol en Ensenada.<br><i class="bi bi-book"></i>Soy miembro activo en el festival de Libros en Ensenada LIBROFEST.<br><i class="bi bi-rocket-takeoff-fill"></i>Soy apasionado a los perros por lo que mantengo una comunicación con el refugio 4Patas y contribuí en la optimización de su página web.
-                </p>
+                <p class="about-title"><i class="bi bi-award-fill"></i>I was part of the Brigades team at my University.
+                  <br>
+                  <i class="bi bi-bank"></i>I am a volunteer in the development of VR equipment at the Caracol museum in Ensenada.
+                  <br>
+                  <i class="bi bi-book"></i>I am an active member of the Book Festival in Ensenada, LIBROFEST.
+                  <br>
+                  <i class="bi bi-rocket-takeoff-fill"></i>I am passionate about dogs, so I maintain communication with the 4Paws shelter and contributed to the optimization of their website.</p>
               </div>
               <div class="col-12 col-about py-2">
-                <h4>PROYECTOS</h4>
+                <h4>PROJECTS</h4>
                 <div class="text-center h1" id="counter">0</div>
-                <h4>CLIENTES</h4>
+                <h4>CUSTOMERS</h4>
                 <div class="text-center h1" id="counter2">0</div>
               </div>
               <div class="col-12 col-about">
@@ -150,7 +154,7 @@
   <section class="skills" id="skills">
     <div class="container-1">
       <div class="container">
-        <h1 class="text-center py-5 title-skills">HABILIDADES</h1>
+        <h1 class="text-center py-5 title-skills">SKILLS</h1>
 
         <div class="row row-cols-2 row-cols-lg-4 text-center">
 
