--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav nav navbar-nav ms-auto">
             <li class="nav-item px-4 py-2">
-              <a class="nav-link px-4 active" aria-current="page" href="#home">INICIO</a>
+              <a class="nav-link px-4 active" aria-current="page" href="#home">HOME</a>
             </li>
             <li class="nav-item px-4 py-2">
-              <a class="nav-link px-4" href="#about">ACERCA</a>
+              <a class="nav-link px-4" href="#about">ABOUT ME</a>
             </li>
             <li class="nav-item px-4 py-2">
-              <a class="nav-link px-4" href="#skills">HABILIDADES</a>
+              <a class="nav-link px-4" href="#skills">SKILLS</a>
             </li>
             <li class="nav-item px-4 py-2">
-              <a class="nav-link px-4" href="#services">SERVICIOS</a>
+              <a class="nav-link px-4" href="#services">SERVICES</a>
             </li>
             <li class="nav-item px-4 py-2">
-              <a class="nav-link px-4" href="#portfolio">PORTAFOLIO</a>
+              <a class="nav-link px-4" href="#portfolio">PORTFOLIO</a>
             </li>
 
             <li class="nav-item dropdown py-3 px-4">
@@ -71,7 +71,7 @@
               </a>
               <ul class="dropdown-menu px-4 py-2">
                 <li><a class="dropdown-item px-4 py-3 text-nav" href="#galery">GALERIA</a></li>
-                <li><a class="dropdown-item px-4 py-3 text-nav" href="#contact">CONTACTO</a></li>
+                <li><a class="dropdown-item px-4 py-3 text-nav" href="#contact">CONTACT</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
@@ -114,7 +114,7 @@
             <div class="row p-1">
               <div class="col-12 col-about text-center title">
                 <h1>David Arechiga</h1>
-                <h5> Programador</h5>
+                <h5>DEVELOPER</h5>
               </div>
               <div class="col-12 col-about pt-3">
                 <h3>ACERCA DE MI</h3>
@@ -135,7 +135,7 @@
                 <div class="text-center h1" id="counter2">0</div>
               </div>
               <div class="col-12 col-about">
-                <button class="text-white cv">DESCARGA CV<i
+                <button class="text-white cv">DOWNLOAD CV<i
                     class="bi bi-download ps-3"></i></button>
               </div>
             </div>
@@ -234,11 +234,11 @@
     <div class="container-1 py-5">
       <div class="container">
 
-        <h1 class="text-center py-5 title-services">SERVICIOS DIGITALES</h1>
+        <h1 class="text-center py-5 title-services">DIGITALE SERVICES</h1>
         <div class="row">
 
           <div class="col-4 title text-center pb-4">
-            <h2 class="title-serv">Desarrollo UNITY <br>& VIRTUAL</h2>
+            <h2 class="title-serv">UNITY <br>& VIRTUAL</h2>
 
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <!--ACORDEON 1-->
@@ -246,12 +246,12 @@
                 <h2 class="accordion-header" id="flush-headingOne">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    <h5 class="responsive-text" style="font-size:15px;">REALIDAD AUMENTADA</h5>
+                    <h5 class="responsive-text" style="font-size:15px;">Augmented Reality</h5>
                   </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body h5">Creación de mundos virtuales. 
+                  <div class="accordion-body h5">Creation of Virtual Worlds.
                   </div>
                 </div>
               </div>
@@ -260,12 +260,12 @@
                 <h2 class="accordion-header" id="flush-headingTwo">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                    <h5 class="responsive-text" style="font-size:15px;">Productos 3D</h5>
+                    <h5 class="responsive-text" style="font-size:15px;">Products 3D</h5>
                   </button>
                 </h2>
                 <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body h5">Desarrollo de productos 3D, como cascos o accesorios de personajes.
+                  <div class="accordion-body h5">Development of 3D products, such as helmets or character accessories.
                   </div>
                 </div>
               </div>
@@ -274,12 +274,12 @@
                 <h2 class="accordion-header" id="flush-headingThree">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                    <h5 class="responsive-text" style="font-size:15px;">DISEÑO VTUBER</h5>
+                    <h5 class="responsive-text" style="font-size:15px;">VTuber Design</h5>
                   </button>
                 </h2>
                 <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body h5">Creación de rigging de personajes 2D. 
+                  <div class="accordion-body h5">Creation of 2D character rigging.
                   </div>
                 </div>
               </div>
@@ -287,7 +287,7 @@
           </div>
 
           <div class="col-4 title text-center pb-4">
-            <h2 class="title-serv">DESARROLLO <br> WEB</h2>
+            <h2 class="title-serv"> WEB <br> DEVELOPER</h2>
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <!--ACORDEON 4-->
               <div class="accordion-item py-5">
@@ -299,7 +299,7 @@
                 </h2>
                 <div id="flush-collapseFour" class="accordion-collapse collapse" aria-labelledby="flush-headingFour"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body h5">Desarrollo del código frontend con variedad de lenguajes y tecnologías para agilizar y mejorar la página.
+                  <div class="accordion-body h5">Development of frontend code using a variety of languages and technologies to streamline and enhance the webpage
                   </div>
                 </div>
               </div>
@@ -313,7 +313,7 @@
                 </h2>
                 <div id="flush-collapseFive" class="accordion-collapse collapse" aria-labelledby="flush-headingFive"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body h5">Desarrollo sencillo, Procesamiento y almacenamiento de datos en una base de datos. Validación de datos y gestión de errores.
+                  <div class="accordion-body h5">Development, processing, and storage of data in a database. Data validation and error management.
                   </div>
                 </div>
               </div>
@@ -322,12 +322,12 @@
                 <h2 class="accordion-header" id="flush-headingSix">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseSix">
-                    <h5 class="responsive-text" style="font-size:15px;">MANTENIMIENTO WEB</h5>
+                    <h5 class="responsive-text" style="font-size:15px;">WEB MAINTENANCE</h5>
                   </button>
                 </h2>
                 <div id="flush-collapseSix" class="accordion-collapse collapse" aria-labelledby="flush-headingSix"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body h5">Mantenimiento, actualización y modificación del sitio web.
+                  <div class="accordion-body h5">Maintenance, updating, and modification of the website.
                   </div>
                 </div>
               </div>
@@ -335,7 +335,7 @@
           </div>
 
           <div class="col-4 title text-center pb-4">
-            <h2 class="title-serv">PROYECTOS DE DIGITALIZACION</h2>
+            <h2 class="title-serv">DIGITALIZATION PROJECTS</h2>
             <!--ACORDEON 7-->
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item py-5">
@@ -347,7 +347,7 @@
                 </h2>
                 <div id="flush-collapseSeven" class="accordion-collapse collapse" aria-labelledby="flush-headingSeven"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body h5">Creación de efectos, medios interactivos, videos y audio.
+                  <div class="accordion-body h5">Creation of effects, interactive media, videos, and audio.
                   </div>
                 </div>
               </div>
@@ -361,7 +361,7 @@
                 </h2>
                 <div id="flush-collapseEight" class="accordion-collapse collapse" aria-labelledby="flush-headingEight"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body h5">Actualizacion de contenidos como logos, menus en QR.
+                  <div class="accordion-body h5">Content updating such as logos, QR menu.
                   </div>
                 </div>
               </div>
@@ -370,12 +370,12 @@
                 <h2 class="accordion-header" id="flush-headingNine">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#flush-collapseNine" aria-expanded="false" aria-controls="flush-collapseNine">
-                    <h5 class="responsive-text" style="font-size:15px;">MARCA E IMAGEN</h5>
+                    <h5 class="responsive-text" style="font-size:15px;">BRAND </h5>
                   </button>
                 </h2>
                 <div id="flush-collapseNine" class="accordion-collapse collapse" aria-labelledby="flush-headingNine"
                   data-bs-parent="#accordionFlushExample">
-                  <div class="accordion-body h5">Construcción de la imagen web de la empresa.
+                  <div class="accordion-body h5">Building the web image of the company.
                   </div>
                 </div>
               </div>
@@ -390,16 +390,16 @@
     <section id="portfolio">
     <div class="container-1">
       <div class="container">
-        <h1 class="text-center py-5 title-services">PORTAFOLIO</h1> 
+        <h1 class="text-center py-5 title-services">PORTFOLIO</h1> 
         <div class="row text-center">
-          <div class="col"><h2 class="text-center">DISERROLLO WEB</h2>
-            <a href="./assets/9.png">VER MAS</a>
-            <h5 class="">Desarrollo de aplicaciones web y moviles. Con herramientas y lenguajes Front-End.</h5>
+          <div class="col"><h2 class="text-center"> WEB</h2>
+            <a href="./assets/9.png">MORE</a>
+            <h5 class="">Development of web and mobile applications. Using Front-End tools and languages.</h5>
             <a href="./webdesig.html"><img class="img-fluid" src="./assets/9.png" alt=""></a></div>
           <div class="col">
-            <h2>DESARROLO DIGITAL</h2>
-            <a href="https://sites.google.com/view/davidarechiga/inicio">VER MAS</a>
-            <h5>Desarrollo de productos digitales. Con herramientas y lenguales de programación.</h5>
+            <h2>DIGITAL DEVELOPMENT</h2>
+            <a href="https://sites.google.com/view/davidarechiga/inicio">MORE</a>
+            <h5>Development of digital products. Using programming tools and languages.</h5>
             <a href="https://sites.google.com/view/davidarechiga/inicio"><img class="img-fluid" src="./assets/4.png"
                 alt=""></a>
           </div>
@@ -465,16 +465,16 @@
   <section id="contact">
     <div class="container-1">
       <div class="container py-5">
-        <h1 class="text-center py-5 title-services">CONTACTO </h1>
+        <h1 class="text-center py-5 title-services">CONTACT</h1>
         <div class="row text-center">
-                      <h2>Contactame sin Compromisos</h2>
-                      <h5>Correo: Ing.David.Arechiga@gmail.com</h5>
-                      <h5>Celular: 646 198 25 17</h5>
+                      <h2>Contact me without obligations.</h2>
+                      <h5>MAIL: Ing.David.Arechiga@gmail.com</h5>
+                      <h5>PHONE: 646 198 25 17</h5>
           <div class="col col-contact py-5">
 
             <form action="https://formspree.io/f/mayzoppo" method="POST" class="form">
               <div class="form-container py-2">
-                <h2 class="form-container mt-5 text-center contact-title">Contactame aqui</h2>
+                <h2 class="form-container mt-5 text-center contact-title">cONTAC ME</h2>
                 <input type="text" class="form-input" name="name" placeholder="Nombre:">
                 <input type="email" name="email" class="form-input" placeholder="Correo:">
                 <textarea class="form-input form-input--message" name="message" placeholder="Mensaje:"></textarea>
