--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
                 <h5>DEVELOPER</h5>
               </div>
               <div class="col-12 col-about pt-3">
-                <h3>ACERCA DE MI</h3>
+                <h3>ABOUT ME</h3>
                 <p class="about-title">Engineer focused on process improvement through analytical programming tools and technology development. I have created, edited, and developed specific products for clients in the virtual, application, and installation sectors, facilitating and advising clients. I am always ready and willing to carry out my tasks and apply my passion for coding to a talented engineering team to develop quality solutions.</p>
-                <h3>Curiosidades</h3>
+                <h3>Trivia</h3>
                 <p class="about-title"><i class="bi bi-award-fill"></i>I was part of the Brigades team at my University.
                   <br>
                   <i class="bi bi-bank"></i>I am a volunteer in the development of VR equipment at the Caracol museum in Ensenada.
