--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li class="nav-item dropdown py-3 px-4">
               <a class="nav-link dropdown-toggle px-4" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                CONTACTO
+                CONTACT
               </a>
               <ul class="dropdown-menu px-4 py-2">
                 <li><a class="dropdown-item px-4 py-3 text-nav" href="#galery">GALERIA</a></li>
