--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="container abs-center">
         <div class="row">
           <div class="col">
-            <h1 class="title-1">David Arechiga</h1>
+            <h1 class="text-home">David Arechiga</h1>
             <h4 class="pt-5 text-home">Unity<br>Developer</h4>
           </div>
           <div class="col">
