--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
             <a href="./webdesig.html"><img class="img-fluid" src="./assets/9.png" alt=""></a></div>
           <div class="col">
             <h2>DIGITAL DEVELOPMENT</h2>
-            <a href="https://sites.google.com/view/davidarechiga/inicio">MORE</a>
+            <a href="./webdevelop.html" >MORE</a>
             <h5>Development of digital products. Using programming tools and languages.</h5>
             <a href="https://sites.google.com/view/davidarechiga/inicio"><img class="img-fluid" src="./assets/4.png"
                 alt=""></a>
