--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
             <h2>DIGITAL DEVELOPMENT</h2>
             <a href="./webdevelop.html" >MORE</a>
             <h5>Development of digital products. Using programming tools and languages.</h5>
-            <a href="https://sites.google.com/view/davidarechiga/inicio"><img class="img-fluid" src="./assets/4.png"
+            <a href="./webdevelop.html" ><img class="img-fluid" src="./assets/4.png"
                 alt=""></a>
           </div>
         </div>
