--- a/uxcase.html
+++ b/uxcase.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./webstyle.css">
   <link rel="shortcut icon" href="./assets/controller.svg" type="image/x-icon">
     <link href="https://fonts.cdnfonts.com/css/lovintime" rel="stylesheet">
-  <title>TrepCamp</title>
+  <title>Bakery</title>
 </head>
 
 <body>
