salto linea en <br

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
           </div>
 
           <div class="col-4 title text-center pb-4">
-            <h2 class="title-serv">DIGITALIZATION PROJECTS</h2>
+            <h2 class="title-serv">DIGITALIZATION <br> PROJECTS</h2>
             <!--ACORDEON 7-->
             <div class="accordion accordion-flush" id="accordionFlushExample">
               <div class="accordion-item py-5">
